5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1752_3088.log
== TEST (2019-05-16 17:15:52) 
-- CODE:
num=int(input("numero inteiro:"))
cont=0
impar=0
par=0
while(num!=0):
	num=int(input("numero inteiro: "))
	cont=cont+1
	if(num%2==0):
		par=par+1
	else:
		impar=impar+1
result=(par/cont) *100
result2=(impar/cont)*100
print(result)
print(result2)
		
-- OUTPUT:
100.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:16:25) 
-- CODE:
num=int(input("numero inteiro:"))
cont=0
impar=0
par=0
while(num!=0):
	num=int(input("numero inteiro: "))
	cont=cont+1
	if(num%2==0):
		par=par+1
	else:
		impar=impar+1
result=(par/cont) *100
result2=(impar/cont)*100
print(result)
print(result2)
		
-- EXECUTION TIME:
0.192532
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
100.0
0.0
---- user output:
100.0
0.0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
42.86
57.14
---- user output:
57.14285714285714
42.857142857142854
-- TEST CASE 3:
---- input:
1
2
3
4
5
6
7
8
9
0
---- correct output:
44.44
55.56
---- user output:
55.55555555555556
44.44444444444444
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:16:55) 
-- CODE:
num=int(input("numero inteiro:"))
cont=0
impar=0
par=0
while(num!=0):
	num=int(input("numero inteiro: "))
	cont=cont+1
	if(num%2==0):
		par=par+1
	else:
		impar=impar+1
result=(par/cont) *100
result2=(impar/cont)*100
print(round(result, 2)
print(round(result2, 2))
		
-- ERROR:
File "XXXX", line 15
    print(round(result2, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:17:23) 
-- CODE:
num=int(input("numero inteiro:"))
cont=0
impar=0
par=0
while(num!=0):
	num=int(input("numero inteiro: "))
	cont=cont+1
	if(num%2==0):
		par=par+1
	else:
		impar=impar+1
result=(par/cont) *100
resultado=(impar/cont)*100
print(round(result, 2)
print(round(resultado, 2))
		
-- ERROR:
File "XXXX", line 15
    print(round(resultado, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:17:30) 
-- CODE:
num=int(input("numero inteiro:"))
cont=0
impar=0
par=0
while(num!=0):
	num=int(input("numero inteiro: "))
	cont=cont+1
	if(num%2==0):
		par=par+1
	else:
		impar=impar+1
result=(par/cont) *100
resultado=(impar/cont)*100
print(round(result, 2))
print(round(resultado, 2))
		
-- OUTPUT:
100.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:17:54) 
-- CODE:
num=int(input("numero inteiro:"))
cont=0
impar=0
par=0
while(num!=0):
	num=int(input("numero inteiro: "))
	cont=cont+1
	if(num%2==0):
		par=par+1
	else:
		impar=impar+1
result=(par/cont) *100
resultado=(impar/cont)*100
print(round(result, 2))
print(round(resultado, 2))
		
-- EXECUTION TIME:
0.221936
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
100.0
0.0
---- user output:
100.0
0.0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
42.86
57.14
---- user output:
57.14
42.86
-- TEST CASE 3:
---- input:
1
2
3
4
5
6
7
8
9
0
---- correct output:
44.44
55.56
---- user output:
55.56
44.44
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:18:00) 
-- CODE:
num=int(input("numero inteiro:"))
cont=0
impar=0
par=0
while(num!=0):
	num=int(input("numero inteiro: "))
	cont=cont+1
	if(num%2==0):
		par=par+1
	else:
		impar=impar+1
result=(par/cont) *100
resultado=(impar/cont)*100
print(round(result, 2))
print(round(resultado, 2))
		
-- OUTPUT:
100.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:18:27) 
-- CODE:
num=int(input("numero inteiro:"))
cont=0
impar=0
par=0
while(num!=0):
	num=int(input("numero inteiro: "))
	cont=cont+1
	if(num%2==0):
		par=par+1
	else:
		impar=impar+1
result=(par/cont) *100
resultado=(impar/cont)*100
print(round(result, 2))
print(round(resultado, 2))
		
-- OUTPUT:
100.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:20:23) 
-- CODE:
num=int(input("numero inteiro:"))
cont=0
impar=0
par=0
while(num!=0):
	num=int(input("numero inteiro: "))
	cont=cont+1
	if(num%2==0):
		par=par+1
		result=par/cont*100
	else:
		impar=impar+1
		result=(impar/cont)*100

print(round(result, 2))
print(round(resultado, 2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(round(resultado, 2))
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:20:40) 
-- CODE:
num=int(input("numero inteiro:"))
cont=0
impar=0
par=0
while(num!=0):
	num=int(input("numero inteiro: "))
	cont=cont+1
	if(num%2==0):
		par=par+1
		result=par/cont*100
	else:
		impar=impar+1
		resultado=(impar/cont)*100

print(round(result, 2))
print(round(resultado, 2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(round(resultado, 2))
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:21:42) 
-- CODE:
num=int(input("numero inteiro:"))
cont=0
impar=0
par=0
while(num!=0):
	num=int(input("numero inteiro: "))
	cont=cont+1
	if(num%2==0):
		par=par+1
		
	else:
		impar=impar+1
		
result=par/cont*100
resultado=impar/cont*100
print(round(result, 2))
print(round(resultado, 2))
		
-- EXECUTION TIME:
0.150497
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
100.0
0.0
---- user output:
100.0
0.0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
42.86
57.14
---- user output:
57.14
42.86
-- TEST CASE 3:
---- input:
1
2
3
4
5
6
7
8
9
0
---- correct output:
44.44
55.56
---- user output:
55.56
44.44
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:22:29) 
-- CODE:
num=int(input("numero inteiro:"))
cont=0
impar=0
par=0
while(num!=0):
	num=int(input("numero inteiro: "))
	cont=cont+1
	if(num%2==0):
		par=par+1
		
	else:
		impar=impar+1
		
result=par/cont*100
resultado=impar/cont*100
print(round(result, 2))
print(round(resultado, 2))
		
-- EXECUTION TIME:
0.138643
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
100.0
0.0
---- user output:
100.0
0.0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
42.86
57.14
---- user output:
57.14
42.86
-- TEST CASE 3:
---- input:
1
2
3
4
5
6
7
8
9
0
---- correct output:
44.44
55.56
---- user output:
55.56
44.44
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:22:53) 
-- CODE:
num=int(input("numero inteiro:"))
cont=0
impar=0
par=0
while(num!=0):
	num=int(input("numero inteiro: "))
	cont=cont+1
	if(num%2==0):
		par=par+1
		
	else:
		impar=impar+1
		
result=par/cont*100
resultado=impar/cont*100
print(round(result, 2))
print(round(resultado, 2))
		
-- OUTPUT:
100.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:23:07) 
-- CODE:
num=int(input("numero inteiro:"))
cont=0
impar=0
par=0
while(num!=0):
	num=int(input("numero inteiro: "))
	cont=cont+1
	if(num%2==0):
		par=par+1
		
	else:
		impar=impar+1
		
result=par/cont*100
resultado=impar/cont*100
print(round(result, 2))
print(round(resultado, 2))
		
-- OUTPUT:
100.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:23:49) 
-- CODE:
num=int(input("numero inteiro:"))
cont=0
impar=0
par=0
while(num!=0):
	num=int(input("numero inteiro: "))
	cont=cont+1
	if((num%2==0)and(num!=0)):
		par=par+1
		
	else:
		impar=impar+1
		
result=par/cont*100
resultado=impar/cont*100
print(round(result, 2))
print(round(resultado, 2))
		
-- OUTPUT:
80.0
20.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:24:00) 
-- CODE:
num=int(input("numero inteiro:"))
cont=0
impar=0
par=0
while(num!=0):
	num=int(input("numero inteiro: "))
	cont=cont+1
	if((num%2==0)and(num!=0)):
		par=par+1
		
	else:
		impar=impar+1
		
result=par/cont*100
resultado=impar/cont*100
print(round(result, 2))
print(round(resultado, 2))
		
-- EXECUTION TIME:
0.150424
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
100.0
0.0
---- user output:
80.0
20.0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
42.86
57.14
---- user output:
42.86
57.14
-- TEST CASE 3:
---- input:
1
2
3
4
5
6
7
8
9
0
---- correct output:
44.44
55.56
---- user output:
44.44
55.56
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:24:33) 
-- CODE:
num=int(input("numero inteiro:"))
cont=0
impar=0
par=0
while(num!=0):
	num=int(input("numero inteiro: "))
	cont=cont+1
	if((num%2==0)and(num!=0)):
		par=par+1
		
	elif(num%2!=0):
		impar=impar+1
		
result=par/cont*100
resultado=impar/cont*100
print(round(result, 2))
print(round(resultado, 2))
		
-- OUTPUT:
80.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:25:39) 
-- CODE:
num=int(input("numero inteiro:"))
cont=0
impar=0
par=0
while(num!=0):
	num=int(input("numero inteiro: "))
	cont=cont+1
	if((num%2==0)and(num!=0)):
		par=par+1
		
	elif(num%2!=0):
		impar=impar+1
		
result=par/cont*100
resultado=impar/cont*100
print(round(result, 2))
print(round(resultado, 2))
		
-- EXECUTION TIME:
0.154961
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
100.0
0.0
---- user output:
80.0
0.0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
42.86
57.14
---- user output:
42.86
42.86
-- TEST CASE 3:
---- input:
1
2
3
4
5
6
7
8
9
0
---- correct output:
44.44
55.56
---- user output:
44.44
44.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:26:21) 
-- CODE:
num=int(input("numero inteiro:"))
cont=0
impar=0
par=0
while(num!=0):
	num=int(input("numero inteiro: "))
	cont=cont+1
	if((num%2==0)and(num!=0)):
		par=par+1
		
	else:
		impar=impar+1
		
result=par/cont*100
resultado=impar/cont*100
print(round(result, 2))
print(round(resultado, 2))
		
-- EXECUTION TIME:
0.142789
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
100.0
0.0
---- user output:
80.0
20.0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
42.86
57.14
---- user output:
42.86
57.14
-- TEST CASE 3:
---- input:
1
2
3
4
5
6
7
8
9
0
---- correct output:
44.44
55.56
---- user output:
44.44
55.56
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:27:11) 
-- CODE:
num=int(input("numero inteiro:"))
cont=1
impar=0
par=0
while(num!=0):
	num=int(input("numero inteiro: "))
	cont=cont+1
	if((num%2==0)and(num!=0)):
		par=par+1
		
	else:
		impar=impar+1
		
result=par/cont*100
resultado=impar/cont*100
print(round(result, 2))
print(round(resultado, 2))
		
-- OUTPUT:
66.67
16.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:28:00) 
-- CODE:
num=int(input("numero inteiro:"))
cont=0
impar=0
par=0
while(num!=0):
	cont=cont+1
	if((num%2==0)and(num!=0)):
		par=par+1
		
	else:
		impar=impar+1
	num=int(input("numero inteiro: "))	
result=par/cont*100
resultado=impar/cont*100
print(round(result, 2))
print(round(resultado, 2))
		
-- OUTPUT:
100.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:28:06) 
-- CODE:
num=int(input("numero inteiro:"))
cont=0
impar=0
par=0
while(num!=0):
	cont=cont+1
	if((num%2==0)and(num!=0)):
		par=par+1
		
	else:
		impar=impar+1
	num=int(input("numero inteiro: "))	
result=par/cont*100
resultado=impar/cont*100
print(round(result, 2))
print(round(resultado, 2))
		
-- EXECUTION TIME:
0.188882
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
100.0
0.0
---- user output:
100.0
0.0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
42.86
57.14
---- user output:
42.86
57.14
-- TEST CASE 3:
---- input:
1
2
3
4
5
6
7
8
9
0
---- correct output:
44.44
55.56
---- user output:
44.44
55.56
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
